tools/k8s/prod-namespace.yaml
# kubectl create namespace prod
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
