tools/k8s/hellosvr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellosvr
  namespace: prod
spec:
  selector:
    app: hellosvr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer # ClusterIP
