tools/k8s/kong-ingress-tls.yaml
# https://docs.konghq.com/kubernetes-ingress-controller/2.11.x/guides/getting-started/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellosvr-kong-ingress
  namespace: prod
  annotations:
    konghq.com/strip-path: 'false'
spec:
  ingressClassName: kong
  rules:
    - host: myexample.com
      http:
        paths:
          - path: /api/v1/echo
            pathType: ImplementationSpecific
            backend:
              service:
                name: hellosvr
                port:
                  number: 80
  tls:
    - hosts: 
        - myexample.com
      secretName: myexample-com-tls
